<resources>
    <string name="app_name">Pure Weather</string>
    <string name="today">Today</string>
    <string name="june_12th_2023">june 12th 2023</string>
    <string name="high">High :</string>
    <string name="low">Low :</string>
    <string name="rain">Rain</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="percentage">%</string>
    <string name="m_h">m/h</string>
    <string name="degree_celcus">°C</string>
    <string name="weather">weather</string>
    <string name="weather_updater">Weather Updater</string>
    <string name="todo">TODO</string>
    <string name="pure_weather">Pure Weather</string>
    <string-array name="array_world_countries">
        <item>Afghanistan</item><item>Albania</item>

        <item>Bahamas</item>

        <item>Cambodia</item><item>Canada</item>

        <item>Denmark</item>

        <item>Egypt</item>

        <item>India</item>

    </string-array>
    <string-array name="array_default_state">
        <item>Select your state</item>
    </string-array>
    <string-array name="array_default_city">
        <item>Select your city</item>
    </string-array>
    <string-array name="array_afghanistan_states">
        <item>Badakhshan</item><item>Badghis</item><item>Baghlan</item><item>Balkh</item><item>Bamyan</item><item>Daykundi</item><item>Farah</item><item>Faryab</item><item>Ghazni</item>
        <item>Helmand</item>
    </string-array>
    <string-array name="afghanistan_Badakhshan_cities">
        <item>Fayzabad</item><item>Baharak</item><item>Ishkashim</item><item>Jurm</item><item>Khash</item>
        <item>Khorog</item><item>Murghab</item><item>Roshan</item><item>Sheberghan</item><item>Shughnan</item><item>Wakhan</item><item>Yamgan</item>
    </string-array>
    <string-array name="afghanistan_Badghis_cities">
    <item>Ab Kamar</item><item>Bala Murghab</item><item>Dardiz</item><item>Ghormach</item><item>Jawand</item><item>Muqur</item>

</string-array>
 <string-array name="afghanistan_Baghlan_cities">
    <item>Andarab</item>
    <item>Baghlan-e Markazi</item>
    <item>Baghlan-e Jadid</item>
    <item>Dara-i Suf</item>
    <item>Dih Bala</item>
    <item>Khinjan</item>
    <item>Khwaja Ghar</item>
    <item>Pol-e Khomri</item>
    <item>Shinwari</item>
    <item>Zari</item>

</string-array>
    <string-array name="afghanistan_Balkh_cities">
        <item>Chahar Bolak</item>
        <item>Chimtal</item>
        <item>Dihdadi</item>
        <item>Jawzjan</item>
        <item>Khwaja Rashid</item>
        <item>Mazar-e-Sharif</item>
        <item>Nahri Shahi</item>
        <item>Sholgara</item>
        <item>Zareh Sharan</item>

    </string-array>
<string-array name="afghanistan_Bamyan_cities">
    <item>Kahmard</item>
    <item>Panjab</item>
    <item>Sayghan</item>
    <item>Yakawlang</item>
</string-array>
<string-array name="afghanistan_Daykundi_cities">
    <item>Gizab</item>
    <item>Khadir</item>
    <item>Khashrod</item>
    <item>Qala-e Panja</item>
    <item>Sangcharak</item>
    <item>Sayedabad</item>

</string-array>
    <string-array name="afghanistan_Farah_cities">
        <item>Bakwa</item>
        <item>Bala Buluk</item>
        <item>Gulistan</item>
        <item>Khaki Safed</item>
        <item>Lash wa Juwayn</item>
        <item>Pur Chaman</item>
        <item>Shib Koh</item>

    </string-array>
<string-array name="afghanistan_Faryab_cities">
    <item>Andkhoy</item>
    <item>Bilchiragh</item>
    <item>Dawlatabad</item>
    <item>Khaniabad</item>
    <item>Qaisar</item>
    <item>Shirin Tagab</item>

</string-array>
<string-array name="afghanistan_Ghazni_cities">
    <item>Andar</item>
    <item>Gelan</item>
    <item>Jaghatu</item>
    <item>Khwaja Omari</item>
    <item>Malistan</item>
    <item>Nawa</item>
    <item>Rashidan</item>
    <item>Waghaz</item>

</string-array>
<string-array name="afghanistan_Helmand_cities">
    <item>Baghran</item>
    <item>Dishu</item>
    <item>Garmser</item>
    <item>Kajaki</item>
    <item>Musa Qala</item>
    <item>Naw Zad</item>
    <item>Sangin</item>
    <item>Washer</item>

</string-array>
    <string-array name="array_albania_states">
        <item>Berat</item>
        <item>Elbasan</item>
        <item>Fier</item>

    </string-array>
    <string-array name="albania_berat_cities">
        <item>Otllak</item>
        <item>Lumas</item>
        <item>Kutalli</item>
    </string-array>
    <string-array name="albania_Elbasan_cities">
    <item>Gramsh</item>
    <item>Peqin</item>
    <item>Librazhd</item>
    <item>Prrenjas</item>
    <item>Belsh</item>
</string-array>
    <string-array name="albania_Fier_cities">
    <item>Patos</item>
    <item>Ballsh</item>
    <item>Roskovec</item>
    <item>Levan</item>
    <item>Cakran</item>
    <item>Mesopotam</item>
    <item>Dushk</item>
    <item>Grabian</item>

</string-array>
    <string-array name="array_bahamas_states">
        <item>Andros</item>
        <item>Berry Islands</item>
        <item>Bimini</item>
        <item>Cat Island</item>
    </string-array>
    <string-array name="bahamas_Andros_cities">
        <item>Nicholls Town</item>
        <item>Andros Town</item>
        <item>Congo Town</item>
        <item>Mangrove Cay</item>
        <item>Fresh Creek</item>
        <item>Mastic Point</item>
        <item>Cargill Creek</item>
        <item>Love Hill</item>
        <item>Lowe Sound</item>
        <item>Red Bays</item>
        <item>Behring Point</item>
        <item>Bowen Sound</item>
        <item>Mars Bay</item>
        <item>Stafford Creek</item>
        <item>Blanket Sound</item>
        <item>Small Hope Bay</item>
        <item>Davis Creek</item>
        <item>San Andros</item>

    </string-array>
    <string-array name="bahamas_Berry_Islands_cities">
    <item>Little Harbour</item>
    <item>Chub Cay</item>
    <item>Great Stirrup Cay</item>

</string-array>
 <string-array name="bahamas_Bimini_cities">
    <item>Bailey Town</item>
    <item>Porgy Bay</item>
    <item>South Bimini</item>

</string-array>
 <string-array name="bahamas_Cat_Island_cities">
    <item>New Bight</item>
    <item>Old Bight</item>
    <item>Port Howe</item>
    <item>Orange Creek</item>
    <item>Knowles</item>
    <item>Alligator Bay</item>
    <item>The Bluff</item>

</string-array>
    <string-array name="array_cambodia_states">
        <item>Kampot</item>

    </string-array>
    <string-array name="cambodia_Kampot_cities">
        <item>Dang Tong</item>
    </string-array>
    <string-array name="array_canada_states">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
    </string-array>
    <string-array name="canada_Alberta_cities">
        <item>Red Deer</item>
        <item>Lethbridge</item>
        <item>St. Albert</item>
        <item>Medicine Hat</item>
        <item>Fort McMurray</item>
        <item>Grande Prairie</item>

    </string-array>
    <string-array name="canada_British_Columbia_cities">
    <item>Burnaby</item>
    <item>Kelowna</item>
    <item>Kamloops</item>
    <item>Nanaimo</item>
    <item>Prince George</item>
    <item>Richmond</item>
    <item>Delta</item>
    <item>New Westminster</item>
    <item>North Vancouver</item>

</string-array>
    <string-array name="canada_Manitoba_cities">
    <item>Brandon</item>
    <item>Thompson</item>
    <item>Portage la Prairie</item>
    <item>Selkirk</item>
    <item>Steinbach</item>
    <item>Winkler</item>
    <item>Morden</item>
    <item>Dauphin</item>
    <item>The Pas</item>
    <item>Flin Flon</item>

</string-array>
    <string-array name="array_Denmark_states">
        <item>Central Denmark Region</item>
        <item>North Denmark Region</item>
    </string-array>
    <string-array name="denmark_Central_Denmark_Region_cities">
        <item>Randers</item>
        <item>Viborg</item>
        <item>Herning</item>
        <item>Silkeborg</item>
        <item>Holstebro</item>
        <item>Skive</item>
        <item>Horsens</item>
        <item>Ikast</item>
        <item>Struer</item>
        <item>Ringkøbing</item>
        <item>Lemvig</item>
        <item>Skanderborg</item>

    </string-array>
    <string-array name="denmark_North_Denmark_Region_cities">
        <item>Aalborg</item>
        <item>Hjørring</item>
        <item>Frederikshavn</item>
        <item>Thisted</item>
        <item>Hobro</item>
        <item>Brønderslev</item>
        <item>Pandrup</item>
        <item>Saltum</item>
        <item>Løkken</item>
        <item>Fjerritslev</item>
        <item>Hirtshals</item>
        <item>Læsø</item>
        <item>Skagen</item>
        <item>Aars</item>

    </string-array>
    <string-array name="array_Egypt_states">
        <item>Giza</item>
        <item>Ismailia</item>
        <item>Luxor</item>
        <item>Matrouh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>

    </string-array>
    <string-array name="egypt_Giza_cities">
        <item>Al Haram</item>
        <item>Imbaba</item>
        <item>Boulaq</item>
        <item>Mohandessin</item>
        <item>Dokki</item>
        <item>Agouza</item>
        <item>Haram City</item>
        <item>Oseem</item>
        <item>Kerdasa</item>
        <item>Badrashin</item>
        <item>Abu Rawash</item>
        <item>Saqqara</item>

    </string-array>
    <string-array name="egypt_Ismailia_cities">
    <item>Abu Sultan</item>
    <item>Al-Tal Al-Kebir</item>
    <item>Al-Qantarah Sharq</item>
    <item>Al-Qantarah Gharb</item>
    <item>El-Qassasin</item>

</string-array>
    <string-array name="egypt_Luxor_cities">
    <item>Al Bayadiyah</item>
    <item>Al Karnak</item>
    <item>Al Maraghah</item>
    <item>Armant</item>

</string-array>
    <string-array name="egypt_Matrouh_cities">
        <item>Dabaa</item>
        <item>Sidi Abdel Rahman</item>
        <item>Ghazala Bay</item>

    </string-array>
    <string-array name="egypt_Minya_cities">
    <item>Samalut</item>
    <item>Abu Qurqas</item>
    <item>Matai</item>
    <item>Matay</item>
    <item>Adwa</item>
    <item>Malga</item>
    <item>Tala</item>

</string-array>
    <string-array name="egypt_Monufia_cities">
    <item>Berket El Sab</item>
    <item>Sers El Lyan</item>
    <item>Shakshouk</item>
    <item>Elshohada</item>

</string-array>
<string-array name="egypt_New_Valley_cities">
    <item>Abu Minqar</item>
    <item>El Dabaa</item>
    <item>El Garga</item>
    <item>El Qasr</item>
</string-array>
    <string-array name="array_indian_states">
        <item>Andaman and Nicobar Islands</item><item>Andhra Pradesh</item><item>Arunachal Pradesh</item><item>Assam</item>
        <item>Bihar</item><item>Chandigarh</item><item>Chhattisgarh</item><item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item><item>Delhi</item><item>Goa</item><item>Gujarat</item><item>Haryana</item>
        <item>Himachal Pradesh</item><item>Jammu and Kashmir</item><item>Jharkhand</item><item>Karnataka</item>
        <item>Kerala</item><item>Ladakh</item><item>Lakshadweep</item><item>Madhya Pradesh</item><item>Maharashtra</item>
        <item>Manipur</item><item>Meghalaya</item><item>Mizoram</item><item>Nagaland</item><item>Orissa</item>
        <item>Puducherry</item><item>Punjab</item><item>Rajasthan</item><item>Sikkim</item><item>Tamil Nadu</item>
        <item>Telangana</item><item>Tripura</item><item>Uttarakhand</item><item>Uttar Pradesh</item><item>West Bengal</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Anantapur</item><item>Chittoor</item><item>East Godavari</item><item>Guntur</item><item>Kadapa</item><item>Krishna</item>
        <item>Kurnool</item><item>Nellore</item><item>Prakasam</item><item>Srikakulam</item><item>Visakhapatnam</item><item>Vizianagaram</item><item>West Godavari</item>
    </string-array>
</resources>